--- a/portfolio.html
+++ b/portfolio.html
@@ -8,13 +8,7 @@
     <Body>
         <div class="header"></div>
         <div class="bodytalk">
-            <div class="name"><h2 style="color: white">John Maguire</h2></div>
-            <div class="nav">
-                <a href="index.html">About Me</a>
-                <a href="contact.html">Contact</a>
-                <a href="portfolio.html">Portfolio</a>
-            </div>
-        <br>
+            <!--Hangman, RPG, Trivia, Rutgers info{try to add a link, in fact, linkn all of 'em!'} and Rockpaper scisors-->
             <div class="bodybox">
                 <div class="bodyname"> <h2>About Me</h2> </div>
                 <hr>
