--- a/contact.html
+++ b/contact.html
@@ -8,12 +8,11 @@
     <Body>
         <div class="header"></div>
         <div class="bodytalk">
-            <div class="name"><h2 style="color: white">John Maguire</h2></div>
-            <div class="nav">
-                <a href="index.html">About Me</a>
-                <a href="contact.html">Contact</a>
-                <a href="portfolio.html">Portfolio</a>
-            </div>
+            <div class="name"></div>
+            <div class="email"></div>
+
+            <div class="submit"></div>
+            <!--add button around here-->
         <br>
             <div class="bodybox">
                 <div class="bodyname"> <h2>About Me</h2> </div>
